Created school service implementation and find by ID method